# clausewitz-style-web-map-projection

./: .pylintrc  README.md  main.py  mypy.ini  provinces.json  pyproject.toml
core/: __init__.py  constants.py  helpers.py  models.py
static/: map.js  old_map.js
templates/: index.html  old_index.html
